# DjangoAutoModels

./: LICENSE  README.md  README_en.md  pyproject.toml
django_auto_models/locale/ja/LC_MESSAGES/: django.mo  django.po
django_auto_models/models/: __init__.py  datetime.py  id.py
